Contact page now generates a unique ticket in the format YEAR-MONTH-DATE/(FIRST INITIAL)(LAST INTIAIL)UID where UID is a randomly generated number between 10 and 90. UID is saved to DB and checked when generating new tickets. Multiple tickets on the same day by people with the same initials must have different UID's.

--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,7 @@
     <div class="row bg-main">
       <div class="col-lg-8 mb-4">
         <h3 style="font-family: Arial Black; color:#15B2D1">Arrange a Service</h3>
-        <p66>Just follow the forms and we'll get back to you with a time available within one business day!</p66>
+        <p66>Just follow the forms and we'll get back to your preferred contact method within one business day to set up a service time and payment method!</p66>
         <form name="sentMessage" id="contactForm" novalidate>
           <div class="row">
             <div class="col-6 col-md-4">
@@ -329,6 +329,7 @@
 
           <div class="control-group form-group">
             <div class="controls">
+              <span class="input-group-addon"><i class="fa fa-sticky-note"></i></span>
               <label>Additional notes:</label>
               <textarea rows="10" cols="100" class="form-control" id="message" required data-validation-required-message="Please enter your additional notes" maxlength="999" style="resize:none"></textarea>
             </div>
@@ -373,7 +374,7 @@
                   <div class="control-group form-group">
                     <div class="controls">
                       <label><span class="input-group-addon"><i class="fa fa-envelope"></i></span> Email Address (optional):</label>
-                      <input type="email" class="form-control" id="email" placeholder="example@example.com">
+                      <input type="email" class="form-control" id="emailFeedback" placeholder="example@example.com">
                     </div>
                   </div>
                 </div>
@@ -406,8 +407,8 @@
 
               <div class="control-group form-group">
                 <div class="controls">
-                  <input type="checkbox" class="form-check-input" id="confirmation" required data-validation-required-message="We require your consent to contact you further.">
-                  <label class="form-check-label" for="confirmation" style="font-family: Arial Black; color:black">Yes, Calvert Exterminators may contact me</label>
+                  <input type="checkbox" class="form-check-input" id="confirmationFeedback" required data-validation-required-message="We require your consent to contact you further.">
+                  <label class="form-check-label" for="confirmationFeedback" style="font-family: Arial Black; color:black">Yes, Calvert Exterminators may contact me</label>
                 </div>
                 <a>
                   By submitting this request, I validate that I am 18 years of age or older. Additionally, I give Calvert Exterminators permission to call or text me at the number provided regarding
